[metadata]
name = s2re
version = 0.0.3
author = Anonymous
author_email = anon@anon.com
description = A simple demo of a embedding caching
long_description = file: README.md
long_description_content_type = text/markdown
url = https://anon.com/embedding-recycling

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    transformers>= 4.17
    torch>=1.11
    rocksdict>=0.2.16
    unqlite>=0.9.3
    plyvel>=1.4.0

[options.packages.find]
where = src
